Fix battery overflow. Removed wrong social img

--- a/_sass/_sass/fun.sass
+++ b/_sass/_sass/fun.sass
@@ -33,8 +33,8 @@ battery
     border-radius: 2px
   charge
     width: auto
-    height: $battery_height
-    margin: -1px
+    height: $battery_height - 4
+    margin: 1px
     background: green
     float: right
     border-radius: 2px
